warn-on-reflection false; --illegal-access=debug; lein-ancient plugin upgrade